[package]
name = "jobhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
jobgen_common = { path = "libs/jobgen_common" }
jobhunt_common = { path = "libs/jobhunt_common" }
soap_rs = { path = "libs/soap_rs" }

[[bin]]
name = "jobhunt"
path = "main.rs"
